Button control and bottomsheet state update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.droidmarvin.materialdesignbottomsheet.MainActivity">
+    tools:context="com.droidmarvin.materialdesignbottomsheet.MainActivity"
+    android:background="@color/backgroundcolor">
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    
+    <android.support.v7.widget.CardView
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        app:cardBackgroundColor="@color/backgroundcolor"
+        app:cardElevation="10dp">
+
+        <LinearLayout
+            android:layout_margin="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:text="xTitle"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:text="Bunch of Text here and here and here. Bunch of Text here and here and here.Bunch of Text here and here and here.Bunch of Text here and here and here."/>
+
+            <ImageView
+                android:id="@+id/shareimg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_share_black_24dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="end"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</android.support.v4.widget.NestedScrollView>
+
+    <include layout="@layout/bottomsheet"/>
 
 </android.support.design.widget.CoordinatorLayout>
